# astrio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assembler/: CMakeLists.txt  assembler.hpp  disassembler.hpp  test_assembler.cpp
astrio/: CMakeLists.txt  alu.sv  alu_controller.sv  alu_type.sv  clk.sv  constants.sv  constr_1.xdc  cpu.sv  cpu_type.sv  debouncer.sv  fetcher.sv  guardian.sv  insts.mem  memory.sv  mux3_type.sv  mux_type.sv  op_mux.sv  op_mux3.sv  pc.sv  pc_type.sv  registers.sv  sevensegdigits.sv  types.sv
astrio/verilator/: sim_alu.cpp  sim_cpu.cpp  sim_fetcher.cpp  sim_pc.cpp  sim_registers.cpp
single_cycle_mips/: CMakeLists.txt  alu.sv  alu_controller.sv  alu_type.sv  constants.sv  cpu.sv  fetcher.sv  inst.data  memory.sv  pc.sv  pc_type.sv  registers.sv  storage.sv  types.sv
single_cycle_mips/verilator/: sim_alu.cpp  sim_cpu.cpp  sim_fetcher.cpp  sim_memory.cpp  sim_pc.cpp  sim_registers.cpp  sim_storage.cpp
